--- a/app.json
+++ b/app.json
@@ -6,5 +6,6 @@
     "python",
     "sample"
   ],
-  "repository": "https://github.com/atikur-rabbi/heroku-flask"
+  "repository": "https://github.com/atikur-rabbi/heroku-flask",
+  "stack": "heroku-20"
 }
